<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.MaterialComponents.DayNight"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etnombre"
        android:layout_width="@dimen/ancho_et"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margenreg"
        android:layout_marginTop="@dimen/margenregtop"
        android:hint="@string/nombre"
        android:textSize="@dimen/tamanho_letra"
        android:textAlignment="center"/>
    <DatePicker
        android:id="@+id/dpcalendario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margenreg"
        android:layout_marginEnd="@dimen/margenreg"
        android:layout_below="@id/etnombre"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:startYear="1980"
        android:endYear="2020"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ettelefono"
        android:layout_width="@dimen/ancho_et"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margenreg"
        android:layout_marginTop="@dimen/margenregtop"
        android:hint="@string/telefono"
        android:textSize="@dimen/tamanho_letra"
        android:layout_below="@id/dpcalendario"
        android:textAlignment="center"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etemail"
        android:layout_width="@dimen/ancho_et"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margenreg"
        android:layout_marginTop="@dimen/margenregtop"
        android:hint="@string/email"
        android:textSize="@dimen/tamanho_letra"
        android:layout_below="@id/ettelefono"
        android:textAlignment="center"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etdescrip"
        android:layout_width="@dimen/ancho_et"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margenreg"
        android:layout_marginTop="@dimen/margenregtop"
        android:hint="@string/descripcion"
        android:textSize="@dimen/tamanho_letra"
        android:layout_below="@id/etemail"
        android:textAlignment="center"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnregistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margenregtop"
        android:layout_below="@+id/etdescrip"
        android:textSize="@dimen/tamanho_letra"
        android:text="@string/siguiente"
        android:theme="@style/Widget.MaterialComponents.Button.TextButton"/>
    </RelativeLayout>
</androidx.appcompat.widget.LinearLayoutCompat>